rpi5/dedrm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dedrm
spec:
  selector:
    app: dedrm
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
