rpi5/dedrm/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dedrm
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dedrm.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: dedrm
          port: 80
  tls:
    secretName: dedrm-cert-tls
    domains:
      - main: dedrm.internal
